--- a/app/src/main/res/layout/activity_splach.xml
+++ b/app/src/main/res/layout/activity_splach.xml
@@ -9,6 +9,7 @@
 
 
     <TextView
+        android:textColor="@color/primaryTextColor"
         android:fontFamily="@font/chewy_regular"
         android:textAlignment="center"
         android:id="@+id/textView"
@@ -33,6 +34,7 @@
 
 
     <TextView
+        android:textColor="@color/primaryTextColor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
