--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             app:layout_constraintTop_toBottomOf="@+id/include" />
 
         <ImageButton
+            android:visibility="gone"
             android:id="@+id/cameraRotate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
