delete data base

--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -7,7 +7,7 @@
         android:title="@string/about"/>
 
     <item
-        android:id="@+id/logout"
+        android:id="@+id/item_logout"
         android:title="@string/Sair"/>
 
     <item
