change color progress bar

--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -9,7 +9,7 @@
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint="@color/primaryColor"/>
+        android:indeterminateTint="@android:color/holo_orange_dark"/>
 
     <TextView
         android:id="@+id/titleLoader"
