--- a/app/src/main/res/layout/layout_images.xml
+++ b/app/src/main/res/layout/layout_images.xml
@@ -5,21 +5,19 @@
     android:elevation="4dp"
     android:layout_margin="2dp"
     app:cardCornerRadius="8dp"
+    android:backgroundTint="@color/primaryLightColor"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="vertical">
 
     <ImageView
         android:scaleType="fitXY"
         android:layout_gravity="center"
         android:src="@mipmap/ic_cam_security"
         android:id="@+id/cardImage"
+        android:rotation="-90"
+        android:translationY="-30dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    </LinearLayout>
+        android:layout_height="300dp"/>
 
 </com.google.android.material.card.MaterialCardView>
