--- a/app/src/main/res/layout/activity_listar_cameras.xml
+++ b/app/src/main/res/layout/activity_listar_cameras.xml
@@ -16,14 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.daimajia.slider.library.SliderLayout
-        android:id="@+id/slider"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
+        tools:listitem="@layout/layout_images"
+        app:spanCount="3"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:rotation="-90"
-        android:translationY="-10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
