--- a/app/src/main/res/layout/layout_images.xml
+++ b/app/src/main/res/layout/layout_images.xml
@@ -16,8 +16,7 @@
         android:src="@mipmap/ic_cam_security"
         android:id="@+id/cardImage"
         android:rotation="-90"
-        android:translationY="-30dp"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
 
 </com.google.android.material.card.MaterialCardView>
